# desktop_editor_testing

./: .gitignore  README.md  config.json  install_requirements.py  pyproject.toml  requirements.txt  tasks.py  test.py  test2.py  test_api.py
frameworks/: StaticData.py  test_data.py  test_exceptions.py
frameworks/desktop/: __init__.py  data.py  desktop_config.json  desktop_editor.py  desktop_exceptions.py
frameworks/desktop/handlers/: VersionHandler.py
frameworks/desktop/package/: __init__.py  package.py  snap_package.py  url_config.json  url_generator.py
frameworks/flatpak/: __init__.py  command.py  flatpak_installer.py  install_commands.json
frameworks/github_api/: __init__.py  api_requests.py  artifacts.py  auth.py  github_api.py  pull_request.py  workflow.py
frameworks/host_control/: FileUtils.py  __init__.py
frameworks/host_control/host_info/: HostInfo.py  Unix.py
frameworks/host_control/windows/: __init__.py  linux_window.py  window.py  windows_window.py
frameworks/image_handler/: __init__.py  image.py  image_new_system.py  image_old_system.py
frameworks/snap/: __init__.py  commands.json  commands.py  install_commands.json  snap.py  snap_commands.py
frameworks/telegram/: Auth.py  telegram.py
frameworks/telegram/Proxy/: ProxyFile.py
tests/: __init__.py  desktop_test.py  desktop_tests.py
tests/assets/: warning_window_info.json
tests/desktop_tests/: __init__.py  appimage_open_test.py  flatpak_open_test.py  linux_packages_open_test.py  open_test.py  snap_open_test.py
tests/tools/: __init__.py  desktop_report.py  paths.py  test_data.py  test_tools.py
(+16 files in other folders)
