[tool.poetry]
name = "desktop_editor_testing"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "desktop_editor_testing"}]

[tool.poetry.dependencies]
python = "^3.7"
invoke = "*"
rich = "*"
psutil = "*"
requests = "*"
distro = "*"
pyvirtualdisplay = "*"
opencv-python = "*"
urllib3 = '*'
pillow = '*'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
